--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         }
         .top {
             width: 100%;
-            background-color: rgb(242,242,242);
+            background-color:lightpink;
             border-color: #cccccc;
             padding: 15px;
         }
@@ -36,9 +36,18 @@
             padding: 5px 12px;
             right: 40%;
             bottom: 7px;
-            background-color: brown;
+            background-color: darkblue;
             color: antiquewhite;
             border-radius: 5px;
+            border: none;
+        }
+        #home , #saved {
+            background-color: rgb(165, 56, 56);
+            color: antiquewhite;
+            border-radius: 8px;
+        }
+        .save:hover, .note:hover {
+            background-color: rgb(247, 78, 78);
         }
         .saved {
             position:absolute !important;
@@ -56,6 +65,10 @@
         #home, #saved {
             border-radius: 5px;
             padding: 5px 10px;
+            border: none;
+        }
+        #head {
+            color : rgb(160, 23, 23);
         }
     </style>
 </head>
